--- a/App.Web.csproj
+++ b/App.Web.csproj
@@ -15,9 +15,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentMigrator.Runner" Version="7.1.0" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.10" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
+    <!-- <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.10" /> -->
+    <!-- <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" /> -->
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.9.3" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers" />
+    <PackageReference Include="Npgsql" Version="10.0.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Serenity.Assets" Version="9.1.1" />
