--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,12 @@
 {
   "Data": {
     "Default": {
-      "ConnectionString": "Server=localhost;Database=Default;User Id=sa;Password=Jahan@18;Encrypt=false;TrustServerCertificate=true",
-      "ProviderName": "System.Data.SqlClient"
+      "ConnectionString": "Server=localhost;Database=Default;User Id=postgres;Password=Jahan@18;TrustServerCertificate=true",
+      "ProviderName": "Npgsql"
     },
     "Northwind": {
-      "ConnectionString": "Server=localhost;Database=Northwind;User Id=sa;Password=Jahan@18;Encrypt=false;TrustServerCertificate=true",
-      "ProviderName": "System.Data.SqlClient"
+      "ConnectionString": "Server=localhost;Database=Northwind;User Id=postgres;Password=Jahan@18;TrustServerCertificate=true",
+      "ProviderName": "Npgsql"
     }
   },
   "Logging": {
